@@ -177,5 +177,9 @@ MessageCounter 2.1.20 [December 2013]
  MessageCounter 2.3.16 [July 2014]
  - [FIXED]		Minor bug Fixes for Xperia and HTC devices
  - [CHANGED]	Counter fragment is main frgment
-   
+
+ MessageCounter 2.3.18 [August 2014]
+ - [FIXED]		Minor bug Fixes as reported
+ 
+ --
  - [ADDED]		Animation for progressbar
